Fixed a few bugs on smaller devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,3 @@
-.App {
-}
-
 .scrollspy {
   position: fixed;
   top: 0;
@@ -24,6 +21,7 @@
       }
     }
   }
+
   .is-current {
     -webkit-transition: 0.2s  ease-in-out;
     -moz-transition: 0.2s  ease-in-out;
