--- a/src/components/aboutMe/index.scss
+++ b/src/components/aboutMe/index.scss
@@ -58,7 +58,7 @@
 }
 
 .btn {
-  margin: 4rem auto;
+  margin: 5rem auto;
   border: 1px solid #000;
   border-radius: 8px;
   color: #000;
@@ -92,7 +92,6 @@
     .btn {
       padding: 0.5em 1em 0.6em;
       font-size: 0.8em;
-      margin-top: 10px;
     }
   }
   @media (min-width: 992px) {
